# IoF-Linux

./: Readme.md
Ch-2/ClockingIn_Machine/: ClockIn_Mach.c
Ch-2/StaffInfor_Manage/: CMakeLists.txt  StaffInfor_Manage.c
Ch-2/StaffInfor_Manage/ClockingIn_Machine/: ClockIn_Mach.c
Ch2/ClockingIn_Machine/: ClockIn_Mach.c  ClockIn_Mach.h  Readme.md
Ch2/StaffInfor_Manage/: CMakeLists.txt  Readme.md  main.c
Ch2/StaffInfor_Manage/ClockingIn_Machine/: CMakeLists.txt  ClockIn_Mach.h  includes.h
Ch2/StaffInfor_Manage/header/: StaffInfor_Manage.h  includes.h
Ch2/StaffInfor_Manage/source/: CMakeLists.txt  StaffInfor_Manage.c
Daliy_Exe/DE_July15/: DE_July15.c  Readme.md
Daliy_Exe/DE_July16/: DE_July16  DE_July16.c  Readme.md
Daliy_Exe/DE_July17/: DE_July17.c  Readme.md
DataStruct_Algorithm/: Readme.md
DataStruct_Algorithm/BubbleSort/: Bubble_Sort.c
